--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>POKENATRA</title>
+  <link rel="stylesheet" type="text/css" href="/css/pokestyle.css">
 </head>
 <body>
   <h1>Pokenatra</h1>
-  <% yield %>
+  <%= yield %>
 </body>
 </html>
